Исправление кодировки параметров запроса.